Fixed event entries not showing up until clicked

--- a/src/scss/InfoPlackard.scss
+++ b/src/scss/InfoPlackard.scss
@@ -7,7 +7,8 @@
     align-items: center;
     padding: 0.5rem;
     transition: background-color 0.2s ease-out;
-
+    border-radius: 10px;
+    
     &:hover{
         background: rgba($primary-color, 0.2);
     }
